🚀 Release UFO public beta 0.7.5
